# 1c-native-component-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.cmake  conanfile.py
include/: AddInNative.h  TcpClient.h  stdafx.h  utils.h
install/: NativeAPI.epf
install/windows/x86_64/tcp_test/: MANIFEST.xml
scripts/: build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
src/: AddInNative.cpp  TcpClient.cpp
